--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -157,6 +157,12 @@
     "TileWMS": {
 
     },
+    "MARCO_WMTS": {
+		"imageUrl": "wmts?format=png&request=GetTile&layer={imagePath}&style=band&tileMatrixSet=Pixel&service=WMTS&version=1.0.0",
+		"thumbnailImageUrl": "wms?layers={url}&request=GetMap&format=png&width=256&height=256&bbox={bbox}",
+		"capabilitiesUrl": "/1.0.0/WMTSCapabilities.json",
+		"tilesServerUrl": "http://marco-polo.imisight.net/mp-gw/"
+	},
   	"ESRI_4326": {
     	"baseUrl": "https://services.arcgisonline.com/arcgis/rest/services/ESRI_Imagery_World_2D/MapServer/tile/{z}/{y}/{x}",
     	"projection": "EPSG:4326",
@@ -393,7 +399,8 @@
     	"debounceTimeInMs": 500,
 	    "timeoutInMs": 3000
     },
-	 "floatingPositionSuffix": ""
+	 "floatingPositionSuffix": "",
+	 "httpTimeout": "3000"
   },
   "menuConfig": {
     "menuItems": {{ getv "/ansyn/menu/items" "null" }},
