1 Add mouse shadow config, with flag activeByDefault 2 Use the flag in tools.app.effects

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -259,7 +259,10 @@
         "min": 1,
         "max": 100
       }
-    ]
+    ],
+    "ShadowMouse": {
+    	"activeByDefault": false
+    }
   },
   "loggerConfig": {
     "env": "PROD",
