--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
@@ -18,7 +18,7 @@
 		<i class="fa fa-arrows"></i>
 	</button>
 
-	<ansyn-combo-box
+	<ansyn-combo-box *ngIf="false"
 		class="combo-box-width"
 		[direction]="mapsAmount > 1 ? 'bottom' : 'top'"
 		name="mapSource"
