--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -16,3 +16,5 @@
 <button (click)="displayOverlaysOnTwoMaps()">Display overlays on two maps</button>
 
 <button (click)="setMarcoOverlays()">Display Marco overlays in timeline</button>
+
+<button (click)="loadImageToCesium()">load Image To Cesium</button>
