--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -79,8 +79,10 @@
 		</div>
 	</div>
 
-	<div [class.invisible]="!algName">Note: this algorithm is only available for {{algName ? algorithms[algName].maxOverlays : '??'}}
-		overlays</div>
+	<div [class.invisible]="!algName">
+		<div>Note: this algorithm is only available for {{algName ? algorithms[algName].maxOverlays : '??'}} overlays.</div>
+		<div>Supported sensors: {{ algName && algorithms[algName].sensorNames?.length > 0 ? algorithms[algName].sensorNames.join(', ') : 'none' }}</div>
+	</div>
 
 	<div class="big-font wide-underline margin"></div>
 
