--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -52,6 +52,28 @@
 					}
 				}
 			}
+			/deep/ div.status-timeline-container {
+				ansyn-imagery-status {
+					&.one-map {
+						max-width: 35%;
+						justify-content: space-between;
+						.buttons {
+							position: initial;
+							left: initial;
+							top: initial;
+						}
+						.notification {
+							position: initial;
+							right: initial;
+							max-width: initial;
+							overflow: hidden;
+						}
+						.description {
+							padding-left: 0;
+						}
+					}
+				}
+			}
 		}
 
 		div.layer {
@@ -151,22 +173,13 @@
 		z-index: @z-index-menu-container;
 	}
 
-	ansyn-menu {
-	}
-
 	.ansynToolsAlone {
 		display: block;
 	}
-
 }
 
 @media screen and (min-width: 959px) {
-	ansyn-menu {
-		display: auto;
-	}
-
 	.ansynToolsAlone {
 		display: none;
 	}
-
 }
