set input character limit

--- a/src/app/@ansyn/core/forms/ansyn-input/ansyn-input.component.html
+++ b/src/app/@ansyn/core/forms/ansyn-input/ansyn-input.component.html
@@ -1,6 +1,7 @@
 <mat-form-field class="example-full-width">
 	<input matInput
 		   #input
+		   [maxLength]="maxLength"
 		   [placeholder]="label"
 		   [autocomplete]="autocomplete"
 		   (blur)="onBlur()"
