--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -12,7 +12,8 @@
 		id="ansyn-task-name"
 		class="margin"
 		label="Name"
-	></ansyn-input>
+		maxLength="20">
+	</ansyn-input>
 
 	<ansyn-combo-box
 		[(ngModel)]="algName"
