--- a/src/app/@ansyn/menu-items/cases/components/edit-case/edit-case.component.html
+++ b/src/app/@ansyn/menu-items/cases/components/edit-case/edit-case.component.html
@@ -11,7 +11,8 @@
 			select
 			name="name"
 			[required]="true"
-			label="Name">
+			label="Name"
+			maxLength="20">
 		</ansyn-input>
 
 		<div class="select-context">
