--- a/src/app/@ansyn/menu-items/cases/components/save-case/save-case.component.html
+++ b/src/app/@ansyn/menu-items/cases/components/save-case/save-case.component.html
@@ -9,7 +9,8 @@
 			select
 			name="name"
 			[required]="true"
-			label="Name">
+			label="Name"
+			maxLength="20">
 		</ansyn-input>
 
 		<div class="bottom-btns">
