--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -11,8 +11,7 @@
 		name="name"
 		id="ansyn-task-name"
 		class="margin"
-		label="Name"
-		maxLength="20">
+		label="Name">
 	</ansyn-input>
 
 	<ansyn-combo-box
