--- a/src/app/@ansyn/menu-items/cases/components/save-case/save-case.component.html
+++ b/src/app/@ansyn/menu-items/cases/components/save-case/save-case.component.html
@@ -9,8 +9,7 @@
 			select
 			name="name"
 			[required]="true"
-			label="Name"
-			maxLength="20">
+			label="Name">
 		</ansyn-input>
 
 		<div class="bottom-btns">
