--- a/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/edit-layer/edit-layer.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/edit-layer/edit-layer.component.html
@@ -6,8 +6,7 @@
 			[ngModel]="layer?.name"
 			select
 			name="name"
-			label="Name"
-			maxLength="20">
+			label="Name">
 		</ansyn-input>
 
 		<div class="bottom-btns">
