set input character limit (#2209)
* set input character limit

* cr

--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -11,8 +11,8 @@
 		name="name"
 		id="ansyn-task-name"
 		class="margin"
-		label="Name"
-	></ansyn-input>
+		label="Name">
+	</ansyn-input>
 
 	<ansyn-combo-box
 		[(ngModel)]="algName"
