--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
@@ -6,7 +6,7 @@
 	<div class="layer" #animatedElement>
 		<div class="maps-container">
 			<ansyn-imageries-manager></ansyn-imageries-manager>
-			<ansyn-context-menu></ansyn-context-menu>
+			<ansyn-context-menu *ngIf="renderContextMenu"></ansyn-context-menu>
 		</div>
 
 		<div class="status-timeline-container">
