--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
@@ -2,7 +2,8 @@
 	*ngIf="!hideOverlay"
 	[overlay]="activeMap?.data?.overlay"
 	[active]="true"
-	[mapId]="activeMap?.id">
+	[mapId]="activeMap?.id"
+	[extraDescription]="extraDescription$ | async">
 </ansyn-imagery-status>
 
 <div class="status-bar" [class.separated-state]="!hideOverlay">
