--- a/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
@@ -7,6 +7,7 @@
 						  [active]="active"
 						  [layerFlag]="mapState.flags.displayLayers"
 						  [mapsAmount]="mapsAmount"
+						  [extraDescription]="extraDescription$ | async"
 						  (onMove)="onMove.emit($event)"
 						  (toggleMapSynchronization)="toggleMapSynchronization()">
 	</ansyn-imagery-status>
