--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
@@ -18,7 +18,7 @@
 		<i class="fa fa-arrows"></i>
 	</button>
 
-	<select *ngIf="false"
+	<select
 		class="combo-box-width"
 		name="mapSource"
 		(ngModelChange)="changeActiveMap($event)"
