--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
@@ -20,6 +20,7 @@
 
 	<select
 		class="combo-box-width"
+		hidden
 		name="mapSource"
 		(ngModelChange)="changeActiveMap($event)"
 		[(ngModel)]="selectedMap">
