entry components to mapfacade

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
@@ -1,5 +1,6 @@
 <ansyn-imagery-status
 	*ngIf="!hideOverlay"
+	[mapState]="activeMap"
 	[overlay]="activeMap?.data?.overlay"
 	[active]="true"
 	[mapId]="activeMap?.id">
