fix: overflow backttoworldview

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
@@ -103,6 +103,7 @@
 	:host {
 		/deep/ .buttons button.back-to-world-view {
 			font-size: 0;
+			overflow: visible;
 			i {
 				font-size: 13.33px;
 			}
