--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
@@ -230,6 +230,7 @@
 				/deep/ ansyn-imagery-status {
 					.buttons button.back-to-world-view {
 						font-size: 0;
+						overflow: visible;
 						i {
 							font-size: 13.33px;
 						}
