prepare imagery status

--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -33,6 +33,7 @@
 			/deep/ .status {
 				.buttons button.back-to-world-view {
 					font-size: 0 !important;
+					overflow: visible;
 					i {
 						font-size: 13.33px !important;;
 					}
