--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
@@ -1,9 +1,6 @@
 <ansyn-imagery-status
 	*ngIf="!hideOverlay"
-	[mapState]="activeMap"
-	[overlay]="activeMap?.data?.overlay"
-	[active]="true"
-	[mapId]="activeMap?.id">
+	[mapState]="activeMap">
 </ansyn-imagery-status>
 
 <div class="status-bar" [class.separated-state]="!hideOverlay">
