--- a/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
@@ -25,4 +25,7 @@
 
 	<ansyn-map-search-box *ngIf="packageConfig?.mapSearch?.active && !overlay"
 						  [mapId]="mapState.id"></ansyn-map-search-box>
+
+	<!--<ansyn-sentinel-combo-box *ngIf="overlay && overlay.sourceType === 'SENTINEL'" [mapId]="mapState.id"></ansyn-sentinel-combo-box>-->
+
 </div>
