start uncircul dependency

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1046,7 +1046,7 @@
 			  }
 		},
 		"SENTINEL": {
-			"inActive": {{ getv "/ansyn/overlay/sentinel/inactive" "true" }},
+			"inActive": {{ getv "/ansyn/overlay/sentinel/inactive" "false" }},
 			"whitelist": [
 				{
 					"name": "Entire Earth",
