--- a/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
@@ -26,5 +26,5 @@
 	<ansyn-map-search-box *ngIf="packageConfig?.mapSearch?.active && !overlay"
 						  [mapId]="mapState.id"></ansyn-map-search-box>
 
-	<ansyn-sentinel-combo-box *ngIf="overlay && overlay.sourceType === 'SENTINEL'" [mapId]="mapState.id"></ansyn-sentinel-combo-box>
+	<ansyn-sentinel-combo-box *ngIf="overlay && overlay.sourceType === 'SENTINEL'" [mapId]="mapState.id"></ansyn-sentinel-combo-box> <!-- TODO: remove from here-->
 </div>
