--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -96,11 +96,7 @@
 			 "filters": [],
 			 "active": false
 		   },
-		   "time": {
-			 "type": "absolute",
-			 "from": "2019-01-01T21:06:00.000Z",
-			 "to": "2019-04-13T20:06:54.891Z"
-		   },
+		   "time": null,
 		   "facets": {
 			 "showOnlyFavorites": false,
 			 "filters": [
