set style for sentinel comboBox

--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
@@ -66,12 +66,12 @@
 			min-width: 144px;
 		}
 
-		/deep/ ansyn-overlay-source-type-notice {
+		/deep/ ansyn-overlay-source-type-notice, /deep/ ansyn-sentinel-combo-box {
 			bottom: 0;
 		}
 
 		&.layout1 {
-			/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice {
+			/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice, /deep/ ansyn-sentinel-combo-box {
 				bottom: @status-bar-height;
 			}
 			div.map-container-wrapper {
@@ -86,7 +86,7 @@
 		}
 
 		&.layout2 {
-			/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice {
+			/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice, /deep/ ansyn-sentinel-combo-box {
 				bottom: @status-bar-height;
 			}
 			div.map-container-wrapper {
@@ -123,7 +123,7 @@
 					div.active-border {
 						height: @height-minus-status;
 					}
-					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice {
+					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice,/deep/ ansyn-sentinel-combo-box {
 						bottom: @status-bar-height;
 					}
 				}
@@ -141,7 +141,7 @@
 					div.active-border {
 						height: @height-minus-status;
 					}
-					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice {
+					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice, /deep/ ansyn-sentinel-combo-box {
 						bottom: @status-bar-height;
 					}
 				}
@@ -172,7 +172,7 @@
 					div.active-border {
 						height: @height-minus-status;
 					}
-					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice {
+					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice, /deep/ ansyn-sentinel-combo-box {
 						bottom: @status-bar-height;
 					}
 				}
@@ -198,7 +198,7 @@
 					div.active-border {
 						height: @height-minus-status;
 					}
-					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice {
+					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice, /deep/ ansyn-sentinel-combo-box {
 						bottom: @status-bar-height;
 					}
 				}
