--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -127,8 +127,8 @@
     "updateCaseDebounceTime": 700,
     "useHash": true,
     "defaultSearchFromDeltaTime": {
-    	"unit": "years",
-    	"amount": 1
+    	"unit": "days",
+    	"amount": 80
     }
   },
   "layersManagerConfig": {
