--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
@@ -23,7 +23,7 @@
 		hidden
 		name="mapSource"
 		(ngModelChange)="changeActiveMap($event)"
-		[(ngModel)]="selectedMap">
+		[ngModel]="selectedMap">
 
 		<option value="openLayersMap">
 			Openlayers
