--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -330,13 +330,15 @@
 			"poorGeoRegistered": "Poor Geo Registered"
 	   	}
     },
-    "needToUseLayerExtent": false,
-    "tilesLoadingDoubleBuffer": {
-    	"debounceTimeInMs": 500,
-	    "timeoutInMs": 3000
-    },
-	 "floatingPositionSuffix": "",
 	 "httpTimeout": "3000"
+  },
+  "olConfig": {
+  	 "needToUseLayerExtent": false,
+	 "tilesLoadingDoubleBuffer": {
+		"debounceTimeInMs": 500,
+		"timeoutInMs": 3000
+	 },
+	 "floatingPositionSuffix": ""
   },
   "menuConfig": {
     "menuItems": {{ getv "/ansyn/menu/items" "null" }},
