--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -320,7 +320,7 @@
     "storageService": {
       "baseUrl": "{{ getv "/ansyn/storage/baseurl" "http://platform.ansyn.io:8081/api/store" }}"
     },
-    "translation": {
+    "translation": {src/app/@ansyn/ansyn/app-providers/overlay-source-providers/idaho-source-provider.ts
     	"default": {
 		 	"Sentinel-2A": "Sentinel 2A",
 		 	"alg_1": "name 1",
