--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -240,9 +240,6 @@
     "schema": "contexts"
   },
   "toolsConfig": {
-	"Annotations": {
-	  "displayId":  "{{ getv "/ansyn/tools/displayid" "0" }}"
-	},
     "GoTo": {
       "from": {
         "datum": "wgs84",
@@ -339,6 +336,11 @@
 		"timeoutInMs": 3000
 	 },
 	 "floatingPositionSuffix": ""
+  },
+  "olPluginsConfig": {
+  	"Annotations": {
+  		"displayId":  "{{ getv "/ansyn/tools/displayid" "0" }}"
+  	}
   },
   "menuConfig": {
     "menuItems": {{ getv "/ansyn/menu/items" "null" }},
