annotation context menu for plugin

--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/annotations-color/annotations-color.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/annotations-color/annotations-color.component.less
@@ -1,4 +1,4 @@
-@import "../../less/map-facade";
+@import "../../../../../map-facade/less/map-facade";
 
 div.list {
 	display: flex;
@@ -17,8 +17,7 @@ div.list {
 		}
 	}
 
-	&.line-width-expand {
-		width: 100%;
-		outline: none;
+	&.color-selection-expand.open {
+		visibility: visible;
 	}
 }
