--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/annotations-weight/annotations-weight.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/annotations-weight/annotations-weight.component.less
@@ -1,4 +1,4 @@
-@import "../../less/map-facade";
+@import "../../../../../map-facade/less/map-facade";
 
 div.list {
 	display: flex;
@@ -17,7 +17,8 @@ div.list {
 		}
 	}
 
-	&.color-selection-expand.open {
-		visibility: visible;
+	&.line-width-expand {
+		width: 100%;
+		outline: none;
 	}
 }
