--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-weight/annotations-weight.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-weight/annotations-weight.component.less
@@ -1,4 +1,4 @@
-@import "../../../../../map-facade/less/map-facade";
+@import "../../../../../../map-facade/less/map-facade";
 
 div.list {
 	display: flex;
