--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-color/annotations-color.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-color/annotations-color.component.less
@@ -1,5 +1,3 @@
-@import "../../../../../../map-facade/less/map-facade";
-
 div.list {
 	display: flex;
 	flex-direction: column;
@@ -9,7 +7,7 @@ div.list {
 	margin: 0;
 	text-align: center;
 	transition: height 0.3s;
-	background: @application-main-color;
+	background: #27B2CF;
 	.item {
 		cursor: pointer;
 		&:hover, &.selected {
