--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
@@ -8,7 +8,7 @@
 	 (ansynClickOutside)="close()">
 	<!-- Using pointerdown for current Chrome, and mousedown for Chrome 44 -->
 
-	<div class="context-menu" [style.outline-color]="'white'">
+	<div class="context-menu" [style.outline-color]="clickMenuProps?.style?.initial['stroke']">
 		<ul class="buttons">
 			<li>
 				<button [class.active]="clickMenuProps.showMeasures" (click)="toggleMeasures()"><i
@@ -67,5 +67,5 @@
 	 [style.width.px]="hoverMenuProps .boundingRect.width"
 	 [style.height.px]="hoverMenuProps.boundingRect.height"
 	 [style.left.px]="hoverMenuProps.boundingRect.left">
-	<div class="context-menu"></div>
+	<div class="context-menu" [style.outline-color]="hoverMenuProps?.style?.initial['stroke']"></div>
 </div>
