cooler color picker

--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/color-picker/color-picker.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/color-picker/color-picker.component.html
@@ -1,10 +1,18 @@
 <div class="color-picker-item">
-	<input [id]="id"
-		   type="color"
-		   [disabled]="!active"
-		   [value]="color"
-		   (change)="colorChange.emit($event.target.value)"
-		   [title]="label"/>
+	<input
+		[id]="id"
+		[disabled]="!active"
+		[title]="label"
+		[colorPicker]="color"
+		(colorPickerChange)="colorChange.emit($event)"
+		[style.background]="color"/>
+
+	<!--<input [id]="id"-->
+		   <!--type="color"-->
+		   <!--[disabled]="!active"-->
+		   <!--[value]="color"-->
+		   <!--(change)="colorChange.emit($event.target.value)"-->
+		   <!--[title]="label"/>-->
 
 	<label [for]="id">
 		<div class="text">{{ label }}</div>
