active color svg

--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/color-picker/color-picker.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/color-picker/color-picker.component.less
@@ -1,3 +1,14 @@
+svg {
+	width: 20px;
+	height: 20px;
+	fill: #ffffff;
+}
+
+i {
+	font-style: normal;
+	display: flex;
+}
+
 .color-picker-item {
 	font-size: 14px;
 	color: white;
