--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-color/annotations-color.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-color/annotations-color.component.less
@@ -1,3 +1,5 @@
+@import "ansyn/less/colors";
+
 div.list {
 	display: flex;
 	flex-direction: column;
@@ -6,7 +8,7 @@ div.list {
 	margin: 0;
 	text-align: center;
 	transition: height 0.3s;
-	background: #27B2CF;
+	background: @application-main-color;
 	.item {
 		cursor: pointer;
 		&:hover, &.selected {
