--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-weight/annotations-weight.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-weight/annotations-weight.component.less
@@ -1,3 +1,5 @@
+@import "ansyn/less/colors";
+
 div.list {
 	display: flex;
 	flex-direction: column;
@@ -11,7 +13,7 @@ div.list {
 	.item {
 		cursor: pointer;
 		&:hover, &.selected {
-			background-color: #297f9b;
+			background-color: @application-main-color;
 		}
 	}
 
