--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-weight/annotations-weight.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-weight/annotations-weight.component.less
@@ -9,11 +9,11 @@ div.list {
 	margin: 0;
 	text-align: center;
 	transition: height 0.3s;
-	background: #27B2CF;
+	background: @application-main-color;
 	.item {
 		cursor: pointer;
 		&:hover, &.selected {
-			background-color: @application-main-color;
+			background-color: #297f9b;
 		}
 	}
 
